# web-scraper

./: DISCUSSION.md  README.md  config.py  docker-compose.yml  frontier.py  main.py  metrics.py  naive.py  prometheus.yml  pyproject.toml  simulation.py  url_collector.py
benchmark/: bloom_test.py  dns_test.py
src/: config.py  dispatcher.py  fetcher.py  frontier.py  main.py  metrics.py  parser.py  simulation.py  url_collector.py  worker.py
