[project]
name = "python-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "cachetools>=6.2.4",
    "prometheus-client>=0.19.0",
    "pybloom-live>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.12.0",
    "ipdb>=0.13.13",
]
